# work-tp4-tp5-calculatrrice

./: CMakeLists.txt  Makefile  README.md  functions.c  functions.h  main.c  prog
lib/dynamicCalculatrice/: CMakeLists.txt  dynamicCal.c  dynamicCal.h
lib/staticCalculatrice/: CMakeLists.txt  staticCal.c  staticCal.h
src/: CMakeLists.txt  main.c
src/app/: CMakeLists.txt  main.c
src/lib/dynamicCalculatrice/: dynamicCalc.c  dynamicCalc.h
src/lib/staticCalculatrice/: calc.c  calc.h  staticCalc.c  staticCalc.h
